WIP: Bump upstream versions
// FIXME: audit conversions so that parser use ImmutableSet.builder()
//        and not HashSet or Set.copyOf() to ensure iteration order
//        consistency
// FIXME: Decimal64 needs constructors specifying fraction-digits

Change-Id: Ib184e4bfd162755788c2e8185a71a25a8eb49af0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>